--- a/CatchMe/Storyboard.storyboard
+++ b/CatchMe/Storyboard.storyboard
@@ -297,7 +297,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FIu-bg-F8l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3500" y="1424"/>
+            <point key="canvasLocation" x="2248" y="864"/>
         </scene>
         <!--Alert Settings View Controller-->
         <scene sceneID="F6u-63-oWa">
@@ -615,7 +615,7 @@
                                         <rect key="frame" x="0.0" y="274" width="320" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="10" y="0.0" width="300" height="43"/>
+                                            <rect key="frame" x="10" y="1" width="300" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="pwz-IF-xfR">
@@ -690,7 +690,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="kSN-TE-pxH" customClass="TPKeyboardAvoidingScrollView">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="kSN-TE-pxH">
                                 <rect key="frame" x="0.0" y="44" width="320" height="416"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
@@ -975,7 +975,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hvv-My-3HZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1943" y="809"/>
+            <point key="canvasLocation" x="1867" y="513"/>
         </scene>
         <!--Main Menu View Controller - Main-->
         <scene sceneID="23g-cZ-Lmq">
@@ -1218,6 +1218,132 @@
         <image name="first.png" width="30" height="30"/>
         <image name="second.png" width="30" height="30"/>
     </resources>
+    <classes>
+        <class className="AlertSettingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AlertSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="dismissKeyboard"/>
+                <relationship kind="action" name="saveInfo"/>
+                <relationship kind="outlet" name="audioNotification" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="invalidTimeDelay" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="timeDelayTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="vibrationNotification" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+        <class className="AudioSettingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AudioSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="changeVolume"/>
+                <relationship kind="action" name="defaultSound"/>
+                <relationship kind="action" name="playSound"/>
+                <relationship kind="action" name="recordSound"/>
+                <relationship kind="action" name="saveSound"/>
+                <relationship kind="action" name="stopSound"/>
+                <relationship kind="outlet" name="audioMessageStatus" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="defaultButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="playButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="recordButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="saveButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="stopButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="volumeSlider" candidateClass="UISlider"/>
+            </relationships>
+        </class>
+        <class className="ContactAddViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactAddViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelButton:"/>
+                <relationship kind="action" name="doneButton:"/>
+                <relationship kind="outlet" name="emailF" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="nameF" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="numberF" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="numberField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="ContactEditViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactEditViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="contactDataChange:"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="numberField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="ContactsListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactsListViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="done:" candidateClass="UIStoryboardSegue"/>
+            </relationships>
+        </class>
+        <class className="MainMenuViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MainMenuViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="activateAccelerometer"/>
+                <relationship kind="outlet" name="latitude" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="longitude" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="systemStatusSwitch" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="x_coord" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="y_coord" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="z_coord" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="MedicalConditionsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MedicalConditionsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="goBackToMenu"/>
+                <relationship kind="outlet" name="medicalConditions" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="personalInfo" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="MedicalInfoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MedicalInfoViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="saveChanges"/>
+                <relationship kind="outlet" name="medicalTextView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="MessageSettingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MessageSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="defaultMessage"/>
+                <relationship kind="action" name="saveChanges"/>
+                <relationship kind="outlet" name="emailStatus" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="messageTextView" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="textMessageStatus" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+        <class className="PersonalInfoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonalInfoViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="saveInfo"/>
+                <relationship kind="outlet" name="addressTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="careCardTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="dayTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="firstNameTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="invalidCardNum" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="invalidDate" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastNameTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="monthTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="yearTextField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="SettingsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingsViewController.h"/>
+        </class>
+        <class className="TPKeyboardAvoidingScrollView" superclassName="UIScrollView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TPKeyboardAvoidingScrollView.h"/>
+        </class>
+        <class className="UIStoryboardSegue" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
